<resources>
    <string name="app_name">Workout_Log</string>
    <string name="enter_sign_up_email">Enter Email</string>
    <string name="enter_sign_up_password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="emailP_required">Email is required</string>
    <string name="Sign_Up_password_required">Password is required</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_second_name">Enter Second Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="first_name">First name is required</string>
    <string name="last_name">Last name is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="ConfirmP_required">Password is required</string>
    <string name="password_short">Password is too short</string>
    <string name="password_long">Password is too long</string>
    <string name="confirming_passwords">Password does not match</string>
    <string name="confirmp_short">Password is too short</string>
    <string name="confirmp_long">Password is too long</string>
    <string name="login_password_short">Password is too short</string>
    <string name="login_password_long">Password is too long</string>
    <string name="plan_bnv">Plan</string>
    <string name="track_bnv">Track</string>
    <string name="profile_bnv">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="plan_fragment">Plan Fragment</string>
    <string name="track_fragment">Track Fragment</string>
    <string name="phone_equired">Phone is required</string>
</resources>